# reacher-obstacles

./: .gitignore  README.md  pyproject.toml
data/: trajopt_dataset.h5
datasets/: trajopt_0aa.npz.h5  trajopt_dataset.h5
src/reacher_obstacles/dataset/: builder.py  inspector.py
src/reacher_obstacles/envs/: __init__.py  reacher_rh.py  reacher_v6.py
src/reacher_obstacles/envs/assets/: marrtino.xml  reacher.xml  reacher3.xml
src/reacher_obstacles/scripts/: build_dataset.py  rl_eval.py  rl_train.py  trajopt_eval.py  trajopt_train.py
src/reacher_obstacles/trajopt/: reacher_trajopt.py  robot_model.py
src/reacher_obstacles/utils/: __init__.py  experiments.py  plot.py
