[project]
authors = [{name = "neverorfrog"}]
requires-python = "==3.9.*"
description = "Add a short description here"
name = "reacher_obstacles"
version = "0.0.1"
dependencies = ["opencv-python>=4.11.0.86,<5"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.dependencies]
# Generic stuff
ipykernel = ">=6.29.5,<7"

# Stuff for RL    
gymnasium = "==0.29.1"
stable-baselines3 = "==2.3.2"
imageio = ">=2.37.0,<3"
wandb = ">=0.19.7,<0.20"
mujoco = ">=3.2.7,<4"
tensorboard = ">=2.19.0,<3"

# Stuff for stub generation
pybind11 = ">=2.13.6,<3"
pybind11-stubgen = ">=2.4.2,<3"
nanobind = ">=2.5.0,<3"

# Stuff for trajopt
pinocchio = "==3.4.0"
casadi = ">=3.6.7,<4"
mediapy = ">=1.2.2,<2"
example-robot-data = ">=4.2.0,<5"

[tool.pixi.tasks]
rl-train = "python src/reacher_obstacles/scripts/rl_train.py"
rl-eval = "python src/reacher_obstacles/scripts/rl_eval.py"
trajopt-train = "python src/reacher_obstacles/scripts/trajopt_train.py"
trajopt-eval = "python src/reacher_obstacles/scripts/trajopt_eval.py"

generate-stubs = """
pybind11-stubgen mujoco -o .typings &&
pybind11-stubgen pinocchio -o .typings &&
python -m nanobind.stubgen -m pinocchio.casadi
"""

[tool.pixi.pypi-dependencies]
reacher_obstacles = { path = ".", editable = true }

[tool.pixi.activation.env]
LD_LIBRARY_PATH = "${CONDA_PREFIX}/lib:$LD_LIBRARY_PATH"
PYTHONPATH = "${CONDA_PREFIX}/lib/python3.9/site-packages:$PYTHONPATH"
